--- a/Project1/Project1/Project1.vcxproj.filters
+++ b/Project1/Project1/Project1.vcxproj.filters
@@ -66,6 +66,9 @@
     <ClInclude Include="8Connect.h">
       <Filter>標頭檔</Filter>
     </ClInclude>
+    <ClInclude Include="Video.h">
+      <Filter>標頭檔</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="MyForm.cpp">
@@ -117,6 +120,9 @@
       <Filter>來源檔案</Filter>
     </ClCompile>
     <ClCompile Include="8Connect.cpp">
+      <Filter>來源檔案</Filter>
+    </ClCompile>
+    <ClCompile Include="Video.cpp">
       <Filter>來源檔案</Filter>
     </ClCompile>
   </ItemGroup>
