--- a/Project1/Project1/Project1.vcxproj
+++ b/Project1/Project1/Project1.vcxproj
@@ -139,6 +139,7 @@
     <ClCompile Include="splash_screen.cpp" />
     <ClCompile Include="Threshold1.cpp" />
     <ClCompile Include="Transparency.cpp" />
+    <ClCompile Include="TTSdecode.cpp" />
     <ClCompile Include="Video.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -193,6 +194,9 @@
     <ClInclude Include="Transparency.h">
       <FileType>CppForm</FileType>
     </ClInclude>
+    <ClInclude Include="TTSdecode.h">
+      <FileType>CppForm</FileType>
+    </ClInclude>
     <ClInclude Include="Video.h">
       <FileType>CppForm</FileType>
     </ClInclude>
@@ -245,6 +249,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Transparency.resx">
       <DependentUpon>Transparency.h</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="TTSdecode.resx">
+      <DependentUpon>TTSdecode.h</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Video.resx">
       <DependentUpon>Video.h</DependentUpon>
