--- a/Project1/Project1/Project1.vcxproj.filters
+++ b/Project1/Project1/Project1.vcxproj.filters
@@ -69,6 +69,9 @@
     <ClInclude Include="Video.h">
       <Filter>標頭檔</Filter>
     </ClInclude>
+    <ClInclude Include="TTSdecode.h">
+      <Filter>標頭檔</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="MyForm.cpp">
@@ -123,6 +126,9 @@
       <Filter>來源檔案</Filter>
     </ClCompile>
     <ClCompile Include="Video.cpp">
+      <Filter>來源檔案</Filter>
+    </ClCompile>
+    <ClCompile Include="TTSdecode.cpp">
       <Filter>來源檔案</Filter>
     </ClCompile>
   </ItemGroup>
